#00005541: Added redirect configuration to OpenWGA and admin client

--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form-v-resources.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form-v-resources.tml
@@ -72,7 +72,7 @@
 	<tml:else>
 		<table class="collection" width="100%" style="margin-bottom:20px">
 			<tr class="collection-title">
-				<td>Name</td>
+				<td width="30%">Name</td>
 				<td>Path</td>
 				<tml:case condition="tmlform.mode()=='edit'">
 					<td></td>
