--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/mode-view.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/mode-view.tml
@@ -89,7 +89,7 @@
 		</tml:case>
 
 		<tml:form id="view-vhost-form" source="none" mode="view">
-			<tml:include ref="::form"/>
+			<tml:include ref="::content"/>
 		</tml:form>
 
 	</tml:inline>
