#00005565: CM-Neo : show hint if page is readprotected

--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
@@ -116,17 +116,19 @@
 					</div>
 				{{/pagename}}
 				
-				{{#pagereaders.length}}
+				{{#readprotected}}
 					<div class="form-group" style="color:red">
-						<label>Leser</label>
-						<p class="data">
-						{{#pagereaders}}
-							{{name}}<br>
-						{{/pagereaders}}
-						</p>
+						<label>Lesbarkeit eingeschränkt</label>
+						{{#pagereaders.length}}
+							<p class="data">
+							{{#pagereaders}}
+								{{name}}<br>
+							{{/pagereaders}}
+							</p>
+						{{/pagereaders.length}}
 					</div>
-				{{/pagereaders.length}}
-				
+				{{/readprotected}}
+
 				{{#pagepublished}}
 					<div class="form-group">
 						<label>Veröffentlicht seit</label>
