#00005572: moved http session management settings to basic config page

--- a/OpenWGA/plugins/admin/design/tml/html/wga/advanced/form.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/advanced/form.tml
@@ -33,14 +33,8 @@
 	DBM.tmlform.removeFields("/clusterConfiguration/options");
 </tml:action>
 
-<tml:action id="clearHttpSessionManagerOptions">
-	_config_bean = DBM.getConfigBean();
-	_config_bean.getHttpSessionManagerConfiguration().options.clear();
-	DBM.tmlform.removeFields("/httpSessionManagerConfiguration/options");
-</tml:action>
-
 <tml:include designdb="@ui" ref="tabview_js">
-	<tml:option name="tabnames">Port Restrictions|port-restrictions,Core Event Listener|event-listener,Lucene engine|lucene,Design directories|design,Bot Agents|pers,Cluster|cluster,HTTP Session Management|httpSessionManagement,File Derivates|fileDerivates</tml:option>
+	<tml:option name="tabnames">Port Restrictions|port-restrictions,Core Event Listener|event-listener,Lucene engine|lucene,Design directories|design,Bot Agents|pers,Cluster|cluster,File Derivates|fileDerivates</tml:option>
 	
 	<tml:inline name="body">
 
@@ -194,74 +188,6 @@
 				</fieldset>
 			</div>
 			
-			<div class="x-hidden" id="httpSessionManagement">
-				<tml:script>
-					var types_map = DBM.getModReg().getModulesForType(Packages.de.innovationgate.wga.modules.types.HttpSessionManagerModuleType); 
-					var types = types_map.keySet().iterator();
-					
-					_classes = createlist();	
-					
-					var currentValue = DBM.getConfigBean().getHttpSessionManagerConfiguration().implClassName;
-					var match = false;
-					
-					while(types.hasNext()){
-						var type = types.next();
-						if	(currentValue==type) {
-							match=true;
-						}
-						_classes.add(types_map.get(type).getTitle(DBM.locale) + "|" + type);
-					}	
-					
-					if(currentValue && !match) {
-						_classes.add(currentValue);
-					}
-				</tml:script>
-			
-				<fieldset>	
-					<tml:[system:fs-input] o_field="httpSessionManagerConfiguration/enabled" o_type="boolean"/>
-					<tml:[system:fs-input] o_field="httpSessionManagerConfiguration/implClassName" o_type="select" o_options="{_classes}" o_changeaction="clearHttpSessionManagerOptions"
-						o_validation="if (tmlform.field('/httpSessionManagerConfiguration/enabled')) {$E_VALUE!=''} else {true}"
-						o_message="Please select an HTTP session manager"/>																
-					<tml:script>
-						try{
-							setOption("module-definition", null);
-							if (tmlform.field('/httpSessionManagerConfiguration/implClassName')) {
-								var def = DBM.getModuleDefinition("HttpSessionManager", tmlform.field('/httpSessionManagerConfiguration/implClassName'));
-								if (def){	
-									def.testDependencies();	// throws exception on failure
-									if (def.getOptionDefinitions())	{				
-										setOption("module-definition", def);
-									}
-								}
-								else {
-									 _msg = "This HTTP session manager implementation was not found in the OpenWGA module registry";
-								}
-							}
-						}
-						catch(e){
-							_msg = e.javaException ? e.javaException.message : e.message
-						}
-					</tml:script>
-					<tml:if condition="option('module-definition')">
-						<tml:then>
-							<tml:[system:module-options:form] o_title="Additional configuration options">
-								<tml:option name="ns">/httpSessionManagerConfiguration/options</tml:option>
-							</tml:[system:module-options:form]>
-						</tml:then>
-						<tml:elseif condition="_msg">
-							<div class="data" style="color:red">
-								<tml:item name="_msg"/>
-								<br>
-								<tml:input name="not-valid" type="hidden"
-									validation="false"
-									message="The selected HTTP session manager is currently not available on this WGA system"
-								/>
-							</div>
-						</tml:elseif>
-					</tml:if>			
-				</fieldset>
-			</div>
-			
 			<div class="x-hidden" id="fileDerivates">
 				<fieldset>	
 					<tml:script>
@@ -276,7 +202,6 @@
 					<tml:[system:fs-input] o_field="fileDerivateManagerConfiguration/updateProcessInterval" o_type="number" o_format="0"/>
 				</fieldset>
 			</div>
-			
 			
 		</div>
 		
