--- a/OpenWGA/plugins/cm-neo/design/tml/html/virtual-doc.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/virtual-doc.tml
@@ -58,6 +58,7 @@
 				title: "<tml:script expression="AFW.Util.encodeForScript(TITLE)"/>",
 				language: "<tml:meta name="language"/>"
 			}
+			window.parent.CM.pageLoaded(WGA.contentinfo) 
 		</script>		
 	</head>
 	
