--- a/OpenWGA/plugins/management/design/tml/html/homepage/main.tml
+++ b/OpenWGA/plugins/management/design/tml/html/homepage/main.tml
@@ -1,7 +1,6 @@
-<tml:if condition="wgacore.getWgaConfiguration().isStartPageEnabled()">
-	<tml:then>
-
-		<tml:[layout:html] o_page-title="[{WGA.Brand.name} start page]">
+<tml:[layout:html] o_page-title="[{WGA.Brand.name} start page]">
+	<tml:if condition="wgacore.getWgaConfiguration().isStartPageEnabled()">
+		<tml:then>
 			<tml:[layout:page] o_title="{wgacore.releaseString}">
 		
 				<tml:option name="body">
@@ -12,22 +11,21 @@
 				</tml:option>
 			
 			</tml:[layout:page]>
-		</tml:[layout:html]>
 
-	</tml:then>
-	<tml:else>
+		</tml:then>
+		<tml:else>
+			<tml:[layout:page] o_title="Page not available">
+		
+				<tml:option name="body">
+					<div class="splash">
+						<h1>Sorry</h1>
+						<p>
+							The start page on this server is disabled.
+						</p>
+					</div>
+				</tml:option>
+			</tml:[layout:page]>
+		</tml:else>
+	</tml:if>
 
-		<!DOCTYPE html>
-		<html>
-			<head>
-				<title><tml:script expression="WGA.Brand.name" encode="html"/> start page</title>
-				<meta name="robots" content="noindex,nofollow">		
-			</head>
-			<body>
-				<h1><tml:script expression="WGA.Brand.name" encode="html"/> start page is disabled.</h1>
-			</body>
-		</html>
-
-	</tml:else>
-</tml:if>
-
+</tml:[layout:html]>
