#00005582: Virtual-Host: added option to redirect to default host and/or to force SSL

--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
@@ -15,6 +15,9 @@
 	</div>
 	<div class="clear"></div>
 
+	<tml:[system:fs-input] o_field="forceDefaultHost" o_type="boolean"/>
+	<tml:[system:fs-input] o_field="forceSSL" o_type="boolean"/>
+
 </fieldset>
 
 <fieldset>
