--- a/OpenWGA/plugins/cm-neo/design/scripts/css/appnav/outline.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/appnav/outline.scss
@@ -19,6 +19,7 @@
 			margin-left: 30px;
 			font-size: .9em;
 			border-bottom: solid silver 1px;
+			cursor: pointer;
 			&.error {
 				color: red;
 				font-style: italic;
