--- a/OpenWGA/plugins/cm-neo/design/tml/html/main.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/main.tml
@@ -11,7 +11,8 @@
 			margin-right: 2px;
 			border-radius: 5px;
 			border: 1px solid white;
-		    box-sizing: border-box;			
+		    box-sizing: border-box;	
+		    font-family: arial;		
 		}
 	
 		h1:before{
