--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/search.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/search.tml
@@ -2,7 +2,7 @@
 	var ctx = context("docid:"+tmlform.name_or_key, false);
 	if(ctx){
 		portlet.fireevent("close-dialog", {
-			redirectto: ctx.contenturl()
+			redirectto: ctx.contenturl("html", null, true)
 		})
 		_dialog_closed=true;
 	}
