#00005577: include api.js early to better handle CM-window-reload

--- a/OpenWGA/plugins/cm-neo/design/tml/html/virtual-doc.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/virtual-doc.tml
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <tml:script>
 	_contentkey=request.getParameter("contentkey");
 	_structkey=request.getParameter("structkey");
@@ -58,7 +59,7 @@
 				title: "<tml:script expression="AFW.Util.encodeForScript(TITLE)"/>",
 				language: "<tml:meta name="language"/>"
 			}
-			window.parent.CM.pageLoaded(WGA.contentinfo) 
+			window.parent.CM && window.parent.CM.pageLoaded(WGA.contentinfo) 
 		</script>		
 	</head>
 	
