--- a/OpenWGA/plugins/cm-neo/design/tml/html/form-field.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/form-field.tml
@@ -39,7 +39,7 @@
 				changeaction=		"{option('changeaction')==null ? VOID : option('changeaction')}"
 				mode=				"{_mode}"
 
-	    		cssclass="[{/*option('type')=='date' ||*/ _wrap ? '' : 'form-control'}]"
+	    		cssclass="{$option_type=='date' ? 'date form-control' : _wrap ? '' : 'form-control'}"
 	    		
 	    		wrap="{_wrap}"
 	    		wrap_class="{_wrap_class}"
