--- a/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
@@ -82,6 +82,28 @@
 		padding: 0 10px
 	}
 
+	#sidepannel-attachment-source{
+		.wrapper{
+			margin-bottom: 10px;
+			.dropdown{
+				border: solid #ddd 1px;
+				border-radius: 4px;
+				background: white;
+				padding: 5px 15px;
+				margin: 5px 0;
+				&:first-child{
+					margin-top: 0;
+				}
+				.dropdown-menu > li > a{
+					white-space: normal;
+				}
+				> a {
+					display: block;
+				}
+			}
+		}
+	}
+
 	#sidepannel-content-versions {
 	
 		fieldset{
