--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/root.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/root.tml
@@ -54,8 +54,14 @@
 				systemAreas.add("Seitenvorlagen|" + area)
 			else _areas.add(area)
 		}
-		_areas.addAll(systemAreas);
+		//_areas.addAll(systemAreas);
 		WGA.TMLPage.setVar("_areas", _areas)
+		WGA.TMLPage.setVar("_optgroups", [
+			{
+				label: "Systembereiche",
+				options: systemAreas
+			}
+		])
 
 		if(areas.size()==1)
 			tmlform.area = areas.get(0);
@@ -74,7 +80,13 @@
 
 	<div class="content form-horizontal">
 		<tml:[::form] o_page="root"/>
-		<tml:[form-field] o_label="Bereich" o_type="select" o_field="area" o_optionsitem="_areas" o_changeaction="$refresh" o_mode="{_areas.size()==1 ? 'view':'edit'}"/>
+		<tml:[form-field] o_label="Bereich" 
+			o_type="select" 
+			o_field="area" 
+			o_optionsitem="_areas" 
+			o-optgroups="_optgroups"
+			o_changeaction="$refresh" 
+			o_mode="{_areas.size()==1 ? 'view':'edit'}"/>
 	</div>
 
 	<div class="footer">
