#00005597: CM-Neo: timing issue may lead to RTF fields not being editable

--- a/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
@@ -90,6 +90,9 @@
 								</tml:else>
 							</tml:if>
 						></iframe>
+						<script>
+							require(["sitepanel"]);
+						</script>
 					</div>
 				</div>
 			</div>
