--- a/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
@@ -128,12 +128,15 @@
 	WGA.event.addListener("<tml:script expression="portlet.portletkey"/>", "clipboard-copy", function(ev){
 		WGA.ajax.action({
 			action: "<tml:action ajax="norefresh">
-				var path = "db:"+portlet.dbkey+"/docid:"+portlet.contentkey;
+				var path = "db:"+portlet.dbkey + (portlet.contentkey ? "/docid:"+portlet.contentkey : "/$struct:" + portlet.structkey)
 				if(context(path, false)){
 					setsessionvar("_CM_clipboard_context", path)
 					portlet.fireevent("clipboard-changed", {
 						title: WGA.encode("html", context(path).TITLE),
-						lang: context(path).LANGUAGE
+						lang: context(path).LANGUAGE || "",
+						version: context(path).VERSION || 0,
+						status: label("content-properties.status." + context(path).STATUS), 
+						contenttpe: context(path).CONTENTTYPE || ""
 					})
 				}
 			</tml:action>",
