#00005617: CM-Neo: re-init sitepanel of exit of admin view

--- a/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
@@ -91,7 +91,9 @@
 							</tml:if>
 						></iframe>
 						<script>
-							require(["sitepanel"]);
+							require(["sitepanel"], function(S){
+								S.init();
+							});
 						</script>
 					</div>
 				</div>
