#00005622: Added possibility to close App-nav panel

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/appnav.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/appnav.scss
@@ -14,7 +14,7 @@
 			top: 0;
 			left: 0;
 			bottom: 0;
-			width: 40px;
+			width: $appnav_toolbar_width;
 			.icon{
 				font-size: 1.5em;
 				width: 40px;
