--- a/OpenWGA/plugins/cm-neo/design/scripts/css/content.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/content.scss
@@ -18,6 +18,7 @@
 			}
 		}
 		.body {
+			background: silver;
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -37,7 +38,7 @@
 				display: none;
 			}
 
-			iframe#site-panel {
+			iframe#site-panel {				
 				position: absolute;
 				width: 100%;
 				height: 100%;
@@ -57,6 +58,7 @@
 			}
 
 			.sitepanel-wrapper{
+				margin: 0 auto;
 				transform-origin: top left;
 				-webkit-transform-origin: top left;
 				position: absolute;
